test/fail/ajaxdoubleproperty.app
//Properties are defined multiple times
application test

section pages

define page root() {
  block[id:= hoi, id:= hoi2] { "hoi1"} 
}
